<resources>
    <string name="app_name">PersonalFinanceApp</string>
    <string name="editUser">JohnDoe</string>
    <string name="passwordField">Password</string>
    <string name="signup">Sign up</string>
    <string name="login">Login</string>
    <string name="drawer_open">Test</string>
    <string name="drawer_close">Test</string>
    <string name="expenditure">Expenditure items</string>
    <string name="Income">Income items</string>
    <string name="editprofile">Edit Your Profile</string>
    <string name="newUsername">New username</string>
    <string name="newPassword">New Password</string>
    <string name="Update">Update</string>
    <string-array name="spinnerChoice">
        <item>Year</item>
        <item>Month</item>
        <item>Week</item>
        <item>Today</item>
        <item>Other</item>
    </string-array>
    <string name="dateSelection">Select dates</string>
    <string name="toggleBtnOff">Show Income Graph</string>
    <string name="toggleBtnOn">Show Expenditure Graph</string>
    <string name="dateFields">YYYY-MM-DD</string>

    <string name="rbExpenditure">Expenditure</string>
    <string name="rbIncome">Income</string>
    <string name="tvCategory">Categories</string>
    <string name="tvAmount">Amount</string>
    <string name="btnAdd">Add</string>
    <string name="etTitle">Title</string>

    <string-array name="spinnerCategory">
        <item>Travel</item>
        <item>Leisure</item>
        <item>Food</item>
        <item>Other</item>
        <item>Accommodation</item>
    </string-array>

    <string-array name="spinnerCategory1">
        <item>Salary</item>
        <item>Other</item>
    </string-array>


    <string name="usernameField">Username</string>
    <string name="nameField">Name</string>
    <string name="lastnameField">Lastname</string>
    <string name="passwordField2">Password</string>
    <string name="btnSignup">Register</string>
    <string name="btnBack">Go back</string>
    <string name="newName">New Name</string>
    <string name="newLastname">New Lastname</string>
    <string name="greeting">Here is a summary of your expenditures and income</string>
    <string name="tvBarcode">Press to scan barcode</string>
    <string name="tvBarCodeInformation">Barcode id (Optional)</string>
    <string name="date">Date</string>
    <string name="expBalance">Expenditure Balance</string>
    <string name="incBalance">Income Balance</string>
    <string name="transDetails">Transaction Details</string>
    <string name="type">Type</string>
    <string name="category">Category</string>
</resources>
