<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:padding="40dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Register here"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etNewUsername"
                android:inputType="textPersonName"
                android:hint="@string/usernameField"
                android:backgroundTint="#FFF"
                android:layout_marginBottom="10dp"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#FFF"
                android:inputType="textPersonName"
                android:id="@+id/etName"
                android:hint="@string/nameField"
                android:layout_marginBottom="10dp"/>

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#FFF"
                android:inputType="textPersonName"
                android:id="@+id/etLastname"
                android:hint="@string/lastnameField"
                android:layout_marginBottom="10dp"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:backgroundTint="#FFF"
                android:hint="@string/passwordField2"
                android:layout_marginBottom="10dp"
                android:id="@+id/etNewUserPassword"/>

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginRight="60dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/btnSignup"
            android:layout_marginRight="15dp"
            android:id="@+id/btnRegister"
            android:background="#FFF"/>


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/btnBack"
                android:id="@+id/btnBack"
                android:background="#FFF"/>
        </LinearLayout>

    </LinearLayout>

</ScrollView>