<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:contentPadding="10dp"
            card_view:cardUseCompatPadding="true"
            card_view:cardElevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <TextView
                android:id="@+id/tvDisplayUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textAlignment="center"
                android:layout_marginBottom="10dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/expBalance"
                    android:textAlignment="center"
                    android:layout_marginBottom="10dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/incBalance"
                    android:textAlignment="center"
                    android:layout_marginBottom="10dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/tvBalanceExpenditure"
                    android:textColor="@color/red"
                    android:textAlignment="center"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/tvBalanceIncome"
                    android:textColor="@color/green"
                    android:textAlignment="center"/>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginBottom="5dp"
                android:text="Total Balance"/>

            <com.example.anton.assignment1.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:id="@+id/tvTotalBalance" />

            </LinearLayout>
    </android.support.v7.widget.CardView>

        <com.github.mikephil.charting.charts.PieChart
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:id="@+id/pcExpenditure">

        </com.github.mikephil.charting.charts.PieChart>

        <ToggleButton
            android:id="@+id/tbPieChart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/toggleBtnOff"
            android:layout_marginTop="10dp"
            android:background="@android:drawable/btn_default"/>


    </LinearLayout>
</ScrollView>